--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,8 @@ defaults:
       layout:       "post"
 
 gems:
-  - jekyll-redirect-from
   - jekyll-seo-tag
+  - jekyll-redirect-from
+  - jekyll-feed
 
 future:             true
